--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,42 @@
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <img src="./images/logo.svg" alt="Logo">
-    <h1>Hello Mate Academy</h1>
+  <header id="navbar" class="navbar">
+    <div class="logo">
+      <a href="#">
+        <img src="./images/Rectangle.png" alt="logo">
+      </a>
+    </div>
+    <div class="group-menu">
+      <a href="#" class="group-menu-item">Become a host</a>
+      <a href="#" class="group-menu-item">Trips</a>
+      <a href="#" class="group-menu-item">Messages</a>
+      <a href="#" class="group-menu-item personal-photo">
+        <img src="./images/Ellipse.png" alt="headshot">
+      </a>
+    </div>
+  </header>
+  <div class="big-photo">
+    <img src="./images/Image.png" alt="">
+  </div>
+  <main>
+    <div class="form-container">
+      <form action="#" class="booking-form">
+        <div class="form-item">
+          <h4 class="cost">25$ per night</h4>
+        </div>
+        <div class="form-item">
+          <input type="text" class="date" placeholder="Date">
+        </div>
+        <div class="form-item">
+          <input type="text" class="guests" placeholder="Guests">
+        </div>
+        <div class="form-item ">
+          <button type="submit" class="button">Book</button>
+        </div>
+      </form>
+    </div>
+  </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
